--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@ionic-native/core": "^3.12.1",
         "@ionic-native/splash-screen": "3.12.1",
         "@ionic-native/status-bar": "3.12.1",
+        "@ionic-native/toast": "^4.1.0",
         "@ionic/storage": "2.0.1",
         "cordova-android": "^6.2.3",
         "cordova-plugin-android-fingerprint-auth": "^1.3.1",
@@ -32,6 +33,7 @@
         "cordova-plugin-splashscreen": "^4.0.3",
         "cordova-plugin-statusbar": "^2.2.2",
         "cordova-plugin-whitelist": "^1.3.1",
+        "cordova-plugin-x-toast": "^2.6.0",
         "cordova-sqlite-storage": "^2.0.4",
         "ionic-angular": "3.5.3",
         "ionic-plugin-keyboard": "^2.2.1",
@@ -56,7 +58,8 @@
             "cordova-plugin-statusbar": {},
             "cordova-plugin-whitelist": {},
             "ionic-plugin-keyboard": {},
-            "cordova-plugin-android-fingerprint-auth": {}
+            "cordova-plugin-android-fingerprint-auth": {},
+            "cordova-plugin-x-toast": {}
         },
         "platforms": [
             "android"
