--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
         "@angular/platform-browser-dynamic": "4.1.3",
         "@ionic-native/android-fingerprint-auth": "^4.1.0",
         "@ionic-native/core": "^3.12.1",
+        "@ionic-native/local-notifications": "^4.1.0",
         "@ionic-native/splash-screen": "3.12.1",
         "@ionic-native/status-bar": "3.12.1",
         "@ionic-native/toast": "^4.1.0",
         "@ionic/storage": "2.0.1",
         "cordova-android": "^6.2.3",
         "cordova-plugin-android-fingerprint-auth": "^1.3.1",
+        "cordova-plugin-app-event": "file:node_modules/cordova-plugin-app-event",
         "cordova-plugin-console": "^1.0.5",
         "cordova-plugin-device": "^1.1.4",
         "cordova-plugin-splashscreen": "^4.0.3",
@@ -35,6 +37,7 @@
         "cordova-plugin-whitelist": "^1.3.1",
         "cordova-plugin-x-toast": "^2.6.0",
         "cordova-sqlite-storage": "^2.0.4",
+        "de.appplant.cordova.plugin.local-notification": "^0.8.5",
         "ionic-angular": "3.5.3",
         "ionic-plugin-keyboard": "^2.2.1",
         "ionicons": "3.0.0",
@@ -59,7 +62,8 @@
             "cordova-plugin-whitelist": {},
             "ionic-plugin-keyboard": {},
             "cordova-plugin-android-fingerprint-auth": {},
-            "cordova-plugin-x-toast": {}
+            "cordova-plugin-x-toast": {},
+            "de.appplant.cordova.plugin.local-notification": {}
         },
         "platforms": [
             "android"
