--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@angular/platform-browser-dynamic": "4.1.3",
         "@ionic-native/android-fingerprint-auth": "^4.1.0",
         "@ionic-native/core": "^3.12.1",
+        "@ionic-native/geolocation": "^4.1.0",
         "@ionic-native/local-notifications": "^4.1.0",
         "@ionic-native/splash-screen": "3.12.1",
         "@ionic-native/status-bar": "3.12.1",
@@ -30,8 +31,10 @@
         "cordova-android": "^6.2.3",
         "cordova-plugin-android-fingerprint-auth": "^1.3.1",
         "cordova-plugin-app-event": "file:node_modules/cordova-plugin-app-event",
+        "cordova-plugin-compat": "^1.1.0",
         "cordova-plugin-console": "^1.0.5",
         "cordova-plugin-device": "^1.1.4",
+        "cordova-plugin-geolocation": "^2.4.3",
         "cordova-plugin-splashscreen": "^4.0.3",
         "cordova-plugin-statusbar": "^2.2.2",
         "cordova-plugin-whitelist": "^1.3.1",
@@ -63,7 +66,8 @@
             "ionic-plugin-keyboard": {},
             "cordova-plugin-android-fingerprint-auth": {},
             "cordova-plugin-x-toast": {},
-            "de.appplant.cordova.plugin.local-notification": {}
+            "de.appplant.cordova.plugin.local-notification": {},
+            "cordova-plugin-geolocation": {}
         },
         "platforms": [
             "android"
